add type-based input validation to Parameter